Finalização do último use case - Gerenciamento