@@ -31,41 +31,63 @@ public class MesaHelper {
         return String.format("%03d-%03d", restauranteId, numeroMesa);
     }
 
-
-    public List<Mesa> findMesasDisponiveis(Long restauranteId, int numeroDePessoas, LocalDateTime dataHoraReserva) {
-
+    public List<Mesa> findMesasByRestaurante(Long restauranteId){
         // Passo 1: Buscar todas as mesas no restaurante
         List<Mesa> mesasTotais = mesaRepository.findByRestauranteId(restauranteId);
         mesasTotais.sort(Comparator.comparingInt(mesa -> Integer.parseInt(mesa.getId().split("-")[1])));
 
-        // Passo 2: Definir o intervalo de tempo para 1 hora antes e 2 horas depois
+        return mesasTotais;
+    }
+
+    public Set<Mesa> findMesasReservadasByRestaurante(Long restauranteId, LocalDateTime dataHoraReserva){
+
+        // Passo 1: Definir o intervalo de tempo para 1 hora antes e 2 horas depois
         LocalDateTime inicioIntervalo = dataHoraReserva.minusHours(1);
         LocalDateTime fimIntervalo = dataHoraReserva.plusHours(2);
 
-        // Passo 3: Buscar reservas para o restaurante dentro do intervalo de tempo
+
+         // Passo 2: Buscar reservas para o restaurante dentro do intervalo de tempo
         List<Reserva> reservasExistentes = reservaHelper.getReservaByHoraMarcada(
                 restauranteId, inicioIntervalo, fimIntervalo);
 
-        // Passo 4: Filtrar as mesas que estão reservadas
-        Set<Mesa> mesasIndisponiveis = reservasExistentes.stream()
+        // Passo 3: Filtrar as mesas que estão reservadas
+        return reservasExistentes.stream()
                 .flatMap(reserva -> reserva.getMesas().stream())
                 .collect(Collectors.toSet());
+    }
 
 
-        // Passo 5: Subtrair mesas reservadas das mesas totais para encontrar as mesas disponíveis
-        List<Mesa> mesasDisponiveis = mesasTotais.stream()
+    public List<Mesa> calculaMesasDisponiveisByRestaurante
+            (Long restauranteId, int numeroDePessoas, LocalDateTime dataHoraReserva) {
+
+        // Passo 1: Buscar todas as mesas de um Restaurante
+        var mesasTotaisByRestaurante = findMesasByRestaurante(restauranteId);
+
+        // Passo 2 : Busca Todas as Mesas Reservadas na Hora da Reserva
+        var mesasIndisponiveis = findMesasReservadasByRestaurante(restauranteId,dataHoraReserva);
+
+        // Passo 3: Subtrair mesas reservadas das mesas totais para encontrar as mesas disponíveis
+        List<Mesa> mesasDisponiveis = mesasTotaisByRestaurante.stream()
                 .filter(mesa -> !mesasIndisponiveis.contains(mesa))
-                .collect(Collectors.toList());
+                .toList();
 
-        // Passo 6: Calcular o número mínimo de mesas necessárias
+        // Passo 4: Calcular o número mínimo de mesas necessárias
         int mesasNecessarias = (numeroDePessoas + 1) / 2; // Arredonda para cima se for ímpar
 
-        // Passo 7: Verificar se há mesas suficientes
+        // Passo 5: Verificar se há mesas suficientes
         if (mesasDisponiveis.size() < mesasNecessarias) {
             throw new MesaIndisponivelException("Não há mesas suficientes para acomodar " + numeroDePessoas + " pessoas.");
         }
 
-        // Passo 8: Retornar a quantidade exata de mesas necessárias
+        // Passo 6: Retornar a quantidade exata de mesas necessárias
         return mesasDisponiveis.subList(0, mesasNecessarias);
     }
+
+
+
+
+
+
+
+
 }
